--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typeorm:revert-migration": "npm run typeorm migration:revert -- -d src/database/typeorm-data-source.ts"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
